complex query parameters, single parameter Map
